# synapse

./: Cargo.toml  README.md
src/: breath_of_life.rs  life.rs  main.rs
src/agent/: mod.rs  planning.rs
src/agent/body/: mod.rs
src/agent/brain/: cortex.rs  memory.rs  mod.rs
src/agent/brain/cortex/: mod.rs  thought.rs
src/agent/brain/hippocampus/: memory.rs  mod.rs
src/agent/runtime/: mod.rs  policy.rs
src/mass/: mod.rs  pulse.rs
src/mass/memory/: blackboard.rs  mod.rs
src/organism/: mod.rs
src/organism/flux/: impulse.rs  mod.rs
src/organism/membrane/: mod.rs
src/organism/nucleus/: mod.rs
src/organism/nucleus/protoplasm/: impulse.rs  mod.rs
src/organism/nucleus/traces/: mod.rs  trace.rs
src/organism/trace/: mod.rs
src/providers/: copilot.rs
src/runtime/: mod.rs  sandbox.rs
src/skills/: mod.rs
src/tools/: mod.rs
src/tools/kimi_tools/: get_data_source.md  get_datasource_desc.md  ipython.md  memory_space_edits.md  search_image_by_image.md  search_image_by_text.md  web_open_url.md  web_search.md
src/tools/manus_tools/: description.md
src/vitality/: mod.rs
