[package]
name = "great-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
anyhow = "1.0.102"
tracing = "0.1"
directories = "6"